@@ -1,3 +1,8 @@
+2011-12-19
+* for each file first determine it is a valid XML file, so other methods no
+longer need to scan it. This is especially to prevent the ranking method from
+scanning these files.
+
 2011-12-18
 * rework extraction of ELF sections from ELF binaries. Just using 'strings'
 got too many strings. The previous version of the extraction of the right
